{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 5321,
  "lineage": "2fa49728-af0a-366e-b149-6af5316d6a6b",
  "resources": [
    {
      "module": "module.efs",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:vpc/vpc-02103dbf9d76a31cf",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07fb1ae707c39ea1a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0c3264ce764ccd073",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02103dbf9d76a31cf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d1e84c7ebf6943dc",
            "owner_id": "421576594835",
            "tags": {
              "Name": "vpc-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:security-group/sg-0f57211f9aafe3e25",
            "description": "Allow nfs inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f57211f9aafe3e25",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "nfs from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs_security_group",
            "name_prefix": "",
            "owner_id": "421576594835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs_security_group"
            },
            "tags_all": {
              "Name": "efs_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02103dbf9d76a31cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_eks_cluster.eks_cluster",
            "data.terraform_remote_state.aws_vpc",
            "module.efs.data.aws_vpc.vpc",
            "module.eks.aws_eks_addon.eks_addon_vpc-cni",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_eks_node_group.eks_node",
            "module.eks.aws_iam_openid_connect_provider.aws_OIDC",
            "module.eks.aws_iam_policy.AmazonEKS_AWS_Load_Balancer_Controller",
            "module.eks.aws_iam_policy.AmazonEKS_Cluster_Autoscaler_Policy",
            "module.eks.aws_iam_policy.AmazonEKS_EFS_CSI_Driver_Policy",
            "module.eks.aws_iam_policy.Amazon_Route53",
            "module.eks.aws_iam_role.eks_SA_CNI_iam_role",
            "module.eks.aws_iam_role.eks_SA_alb_iam_role",
            "module.eks.aws_iam_role.eks_SA_ca_iam_role",
            "module.eks.aws_iam_role.eks_SA_dns_iam_role",
            "module.eks.aws_iam_role.eks_SA_efs_iam_role",
            "module.eks.aws_iam_role.eks_cluster_iam_role",
            "module.eks.aws_iam_role.eks_node_iam_role",
            "module.eks.aws_iam_role_policy_attachment.eks_SA_iam_role-AmazonEKS_AWS_Load_Balancer_Controller",
            "module.eks.aws_iam_role_policy_attachment.eks_SA_iam_role-AmazonEKS_CNI_Policy",
            "module.eks.aws_iam_role_policy_attachment.eks_SA_iam_role-AmazonEKS_Cluster_Autoscaler_Policy",
            "module.eks.aws_iam_role_policy_attachment.eks_SA_iam_role-AmazonEKS_EFS_CSI_Driver_Policy",
            "module.eks.aws_iam_role_policy_attachment.eks_SA_iam_role-Amazon_Route53",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_iam_role-AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.eks_node_iam_role-AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.eks_node_iam_role-AmazonEKSWorkerNodePolicy",
            "module.eks.aws_security_group_rule.eks_vpn_security_rule",
            "module.eks.data.aws_iam_policy_document.iam_policy_OIDC_assume_role_policy_SA_CNI",
            "module.eks.data.aws_iam_policy_document.iam_policy_OIDC_assume_role_policy_SA_alb",
            "module.eks.data.aws_iam_policy_document.iam_policy_OIDC_assume_role_policy_SA_ca",
            "module.eks.data.aws_iam_policy_document.iam_policy_OIDC_assume_role_policy_SA_dns",
            "module.eks.data.aws_iam_policy_document.iam_policy_OIDC_assume_role_policy_SA_efs",
            "module.eks.data.aws_subnets.private_subnets",
            "module.eks.data.aws_subnets.vpc_subnets",
            "module.eks.data.tls_certificate.eks_tls_cert",
            "module.eks.kubernetes_annotations.sa_CNI",
            "module.eks.kubernetes_namespace.external-dns",
            "module.eks.kubernetes_namespace.istio-gateway",
            "module.eks.kubernetes_namespace.istio-system",
            "module.eks.kubernetes_service_account.sa_alb",
            "module.eks.kubernetes_service_account.sa_ca",
            "module.eks.kubernetes_service_account.sa_dns",
            "module.eks.kubernetes_service_account.sa_efs",
            "module.eks.module.resourceSetting.aws_route53domains_registered_domain.aws_registered_domain",
            "module.eks.module.resourceSetting.data.aws_acm_certificate.acm_certificate",
            "module.eks.module.resourceSetting.data.aws_eks_cluster.eks_cluster",
            "module.eks.module.resourceSetting.data.aws_eks_node_group.example",
            "module.eks.module.resourceSetting.data.aws_subnets.public_subnets",
            "module.eks.module.resourceSetting.helm_release.aws-cluster-autoscaler",
            "module.eks.module.resourceSetting.helm_release.aws-efs-csi-driver",
            "module.eks.module.resourceSetting.helm_release.aws-load-balancer-controller",
            "module.eks.module.resourceSetting.helm_release.external-dns",
            "module.eks.module.resourceSetting.helm_release.istio-base",
            "module.eks.module.resourceSetting.helm_release.istio-cni",
            "module.eks.module.resourceSetting.helm_release.istio-gateway",
            "module.eks.module.resourceSetting.helm_release.istiod",
            "module.eks.module.resourceSetting.helm_release.local_config-gateway",
            "module.eks.module.resourceSetting.helm_release.local_gatewayAPI",
            "module.eks.module.resourceSetting.null_resource.helm_after",
            "module.eks.null_resource.annotations_depends",
            "module.eks.null_resource.iam_role_depends",
            "module.eks.null_resource.kubernetes_depends",
            "module.eks.null_resource.namespace_depends",
            "module.eks.null_resource.sa_depends"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_vpn_security_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "vpn-client association",
            "from_port": 0,
            "id": "sgrule-2018272638",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b89c6d08adf7dc5a",
            "security_group_rule_id": "sgr-03de6563b6cb5316e",
            "self": false,
            "source_security_group_id": "sg-0d0a7d5238f4c4982",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.aws_vpc",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_iam_role.eks_cluster_iam_role",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_iam_role-AmazonEKSClusterPolicy",
            "module.eks.data.aws_subnets.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "external-dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "external-dns",
            "metadata": [
              {
                "generation": 0,
                "name": "external-dns",
                "resource_version": "796",
                "uid": "20c040ea-af21-4b42-9100-1aaea75bc9bd"
              }
            ]
          },
          "dependencies": [
            "data.aws_eks_cluster.eks_cluster",
            "data.terraform_remote_state.aws_vpc",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_iam_role.eks_cluster_iam_role",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_iam_role-AmazonEKSClusterPolicy",
            "module.eks.data.aws_subnets.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "istio-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "istio-gateway",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "istio-injection": "enabled",
                  "kiali-enabled": "true"
                },
                "name": "istio-gateway",
                "resource_version": "791",
                "uid": "45bfb187-33e5-41cf-89db-0bc03ae4bcf6"
              }
            ]
          },
          "dependencies": [
            "data.aws_eks_cluster.eks_cluster",
            "data.terraform_remote_state.aws_vpc",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_iam_role.eks_cluster_iam_role",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_iam_role-AmazonEKSClusterPolicy",
            "module.eks.data.aws_subnets.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "istio-system",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "istio-system",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "kiali-enabled": "true"
                },
                "name": "istio-system",
                "resource_version": "799",
                "uid": "a3bfedbd-63c7-4ab2-b75a-fb3c2f6cbe89"
              }
            ]
          },
          "dependencies": [
            "data.aws_eks_cluster.eks_cluster",
            "data.terraform_remote_state.aws_vpc",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_iam_role.eks_cluster_iam_role",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_iam_role-AmazonEKSClusterPolicy",
            "module.eks.data.aws_subnets.private_subnets"
          ]
        }
      ]
    }
  ]
}